# Learning-FastAPI

./: README.md  pyproject.toml
app/: main.py
app/db/: data.py
app/models/: basemodel.py
